<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profile_menu_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_setting"
        app:showAsAction="always" />
</menu>