...
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/happy_rabbit_face"
        app:srcCompat="@drawable/beginner_no_words" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/no_word_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="20dp"
...
